--- a/pages/levm.html
+++ b/pages/levm.html
@@ -6,15 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEVM Flamegraph Comparison</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-
-    <!-- This shows in the Slack link preview -->
-    <meta content="Ethrex flamegraph comparison" property="og:title">
-    <meta content="Last updated {{LAST_UPDATE}}" property="og:description">
-    <meta property="og:image" content="flamegraph_levm.svg/flamegraph_levm.svg" />
-    <meta name="twitter:label1" content="🕒 LEVM" />
-    <meta name="twitter:data1" content="{{LEVM_TIME}}" />
-    <meta name="twitter:label2" content="🕒 REVM" />
-    <meta name="twitter:data2" content="{{REVM_TIME}}" />
 </head>
 
 <body>
@@ -26,18 +17,18 @@
     <main class="container">
         <div class="column">
             <div class="col-header">
-                <h2>Ethrex</h2>
-                <a href="flamegraph_revm.svg/flamegraph_revm.svg" download="flamegraph_revm.svg">Download</a>
+                <h2>LEVM</h2>
+                <a href="flamegraph_levm.svg/flamegraph_levm.svg" download="flamegraph_levm.svg">Download</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{LEVM_TIME}}</p>
             <div class="object-container">
-                <object id="svg1" data="flamegraph_revm.svg/flamegraph_revm.svg" type="image/svg+xml"></object>
+                <object id="svg1" data="flamegraph_levm.svg/flamegraph_levm.svg" type="image/svg+xml"></object>
             </div>
         </div>
         <div class="column">
             <div class="col-header">
-                <h2>Reth</h2>
-                <a href="flamegraph_revm.svg/flamegraph_reth.svg" download="flamegraph_revm.svg">
+                <h2>REVM</h2>
+                <a href="flamegraph_revm.svg/flamegraph_levm.svg" download="flamegraph_revm.svg">
                     Download</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{REVM_TIME}}</p>
