--- a/pages/levm.html
+++ b/pages/levm.html
@@ -28,7 +28,7 @@
         <div class="column">
             <div class="col-header">
                 <h2>REVM</h2>
-                <a href="flamegraph_revm.svg/flamegraph_levm.svg" download="flamegraph_revm.svg">
+                <a href="flamegraph_revm.svg/flamegraph_revm.svg" download="flamegraph_revm.svg">
                     Download</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{REVM_TIME}}</p>
