add open to flamegraph page

--- a/pages/levm.html
+++ b/pages/levm.html
@@ -18,7 +18,8 @@
         <div class="column">
             <div class="col-header">
                 <h2>LEVM</h2>
-                <a href="flamegraph_levm.svg/flamegraph_levm.svg" download="flamegraph_levm.svg">Download</a>
+                <a href="flamegraph_levm.svg/flamegraph_levm.svg" download="flamegraph_levm.svg">Download</a> |
+                <a href="flamegraph_levm.svg/flamegraph_levm.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{LEVM_TIME}}</p>
             <div class="object-container">
@@ -29,7 +30,8 @@
             <div class="col-header">
                 <h2>REVM</h2>
                 <a href="flamegraph_revm.svg/flamegraph_revm.svg" download="flamegraph_revm.svg">
-                    Download</a>
+                    Download</a> |
+                <a href="flamegraph_revm.svg/flamegraph_revm.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{REVM_TIME}}</p>
             <div class="object-container">
