--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,8 @@
         <div class="column">
             <div class="col-header">
                 <h2>Ethrex</h2>
-                <a href="flamegraph_ethrex.svg/flamegraph_ethrex.svg" download="flamegraph_ethrex.svg">Download</a>
+                <a href="flamegraph_ethrex.svg/flamegraph_ethrex.svg" download="flamegraph_ethrex.svg">Download</a> |
+                <a href="flamegraph_ethrex.svg/flamegraph_ethrex.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{ETHREX_TIME}}</p>
             <div class="object-container">
@@ -38,7 +39,8 @@
             <div class="col-header">
                 <h2>Reth</h2>
                 <a href="flamegraph_reth.svg/flamegraph_reth.svg" download="flamegraph_reth.svg">
-                    Download</a>
+                    Download</a> |
+                <a href="flamegraph_reth.svg/flamegraph_reth.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{RETH_TIME}}</p>
             <div class="object-container">
