--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
     <!-- This shows in the Slack link preview -->
     <meta content="Ethrex flamegraph comparison" property="og:title">
     <meta content="Last updated {{LAST_UPDATE}}" property="og:description">
-    <meta property="og:image" content="flamegraph_ethrex.svg/flamegraph_ethrex.svg" />
+    <meta property="og:image" content="flamegraph_ethrex.svg" />
     <meta name="twitter:label1" content="🕒 Ethrex" />
     <meta name="twitter:data1" content="{{ETHREX_TIME}}" />
     <meta name="twitter:label2" content="🕒 Reth" />
@@ -27,22 +27,24 @@
         <div class="column">
             <div class="col-header">
                 <h2>Ethrex</h2>
-                <a href="flamegraph_ethrex.svg/flamegraph_ethrex.svg" download="flamegraph_ethrex.svg">Download</a>
+                <a href="flamegraph_ethrex.svg" download="flamegraph_ethrex.svg">Download</a> |
+                <a href="flamegraph_ethrex.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{ETHREX_TIME}}</p>
             <div class="object-container">
-                <object id="svg1" data="flamegraph_ethrex.svg/flamegraph_ethrex.svg" type="image/svg+xml"></object>
+                <object id="svg1" data="flamegraph_ethrex.svg" type="image/svg+xml"></object>
             </div>
         </div>
         <div class="column">
             <div class="col-header">
                 <h2>Reth</h2>
-                <a href="flamegraph_reth.svg/flamegraph_reth.svg" download="flamegraph_reth.svg">
-                    Download</a>
+                <a href="flamegraph_reth.svg" download="flamegraph_reth.svg">
+                    Download</a> |
+                <a href="flamegraph_reth.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{RETH_TIME}}</p>
             <div class="object-container">
-                <object id="svg2" data="flamegraph_reth.svg/flamegraph_reth.svg" type="image/svg+xml"></object>
+                <object id="svg2" data="flamegraph_reth.svg" type="image/svg+xml"></object>
             </div>
         </div>
     </main>
