--- a/pages/levm.html
+++ b/pages/levm.html
@@ -18,22 +18,24 @@
         <div class="column">
             <div class="col-header">
                 <h2>LEVM</h2>
-                <a href="flamegraph_levm.svg/flamegraph_levm.svg" download="flamegraph_levm.svg">Download</a>
+                <a href="flamegraph_levm.svg" download="flamegraph_levm.svg">Download</a> |
+                <a href="flamegraph_levm.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{LEVM_TIME}}</p>
             <div class="object-container">
-                <object id="svg1" data="flamegraph_levm.svg/flamegraph_levm.svg" type="image/svg+xml"></object>
+                <object id="svg1" data="flamegraph_levm.svg" type="image/svg+xml"></object>
             </div>
         </div>
         <div class="column">
             <div class="col-header">
                 <h2>REVM</h2>
-                <a href="flamegraph_revm.svg/flamegraph_levm.svg" download="flamegraph_revm.svg">
-                    Download</a>
+                <a href="flamegraph_revm.svg" download="flamegraph_revm.svg">
+                    Download</a> |
+                <a href="flamegraph_revm.svg" target="_blank">Open</a>
             </div>
             <p class="time-elapsed">Time elapsed: {{REVM_TIME}}</p>
             <div class="object-container">
-                <object id="svg2" data="flamegraph_revm.svg/flamegraph_revm.svg" type="image/svg+xml"></object>
+                <object id="svg2" data="flamegraph_revm.svg" type="image/svg+xml"></object>
             </div>
         </div>
     </main>
